--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,40 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="<3 Nymbryxion"
-    />
+    <meta property="og:title" content="AniDraw San Francisco">
+    <!-- <meta name="author" content="AniDraw Techies"> -->
+    <meta property="og:locale" content="en">
+    <meta name="description" content="<3 Nymbryxion">
+    <meta property="og:description" content="<3 Nymbryxion">
+    <link rel="canonical" href="https://anidraw-sanfrancisco.art/">
+    <meta property="og:url" content="https://anidraw-sanfrancisco.art/">
+    <meta property="og:site_name" content="AniDraw San Francisco">
+    <meta property="og:image" content="https://anidraw-sanfrancisco.art/logo512.png">
+    <meta property="og:image:height" content="512">
+    <meta property="og:image:width" content="512">
+    <meta property="og:image:alt" content="Nymbrixion">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:image" content="https://anidraw-sanfrancisco.art/logo512.png">
+    <meta name="twitter:image:alt" content="Nymbrixion">
+    <meta property="twitter:title" content="AniDraw San Francisco">
+    <script type="application/ld+json">
+      {
+        "@context":"https://schema.org",
+        "@type":"WebSite",
+        "description":"<3 Nymbrixion",
+        "headline":"AniDraw San Francisco",
+        "image": {
+          "height":512,
+          "width":512,
+          "alt":"Nymbrixion",
+          "url":"https://anidraw-sanfrancisco.art/logo512.png",
+          "@type":"imageObject"
+        },
+        "name":"AniDraw San Francisco",
+        "url":"https://anidraw-sanfrancisco.art/"
+      }
+    </script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
