--- a/public/index.html
+++ b/public/index.html
@@ -16,17 +16,17 @@
     <meta property="og:image" content="https://anidraw-sanfrancisco.art/logo512.png">
     <meta property="og:image:height" content="512">
     <meta property="og:image:width" content="512">
-    <meta property="og:image:alt" content="Nymbrixion">
+    <meta property="og:image:alt" content="Nymbryxion">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:image" content="https://anidraw-sanfrancisco.art/logo512.png">
-    <meta name="twitter:image:alt" content="Nymbrixion">
+    <meta name="twitter:image:alt" content="Nymbryxion">
     <meta property="twitter:title" content="AniDraw San Francisco">
     <script type="application/ld+json">
       {
         "@context":"https://schema.org",
         "@type":"WebSite",
-        "description":"<3 Nymbrixion",
+        "description":"<3 Nymbryxion",
         "headline":"AniDraw San Francisco",
         "image": {
           "height":512,
